--- a/v1.19.9/ingress/baremetalingress.yaml
+++ b/v1.19.9/ingress/baremetalingress.yaml
@@ -286,13 +286,15 @@ spec:
   type: NodePort
   ports:
     - name: http
+      protocol: TCP
       port: 80
-      protocol: TCP
       targetPort: http
+      nodePort: 30080
     - name: https
-      port: 443
       protocol: TCP
+      port: 443
       targetPort: https
+      nodePort: 30443
   selector:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
