--- a/v1.19.9/local-path-provisioner.yaml
+++ b/v1.19.9/local-path-provisioner.yaml
@@ -15,3 +15,7 @@ spec:
     path: v1.19.9/local-path-provisioner
     repoURL: 'https://github.com/jackiefong/bootstrap.git'
     targetRevision: HEAD
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
