--- a/v1.19.9/cert-manager.yaml
+++ b/v1.19.9/cert-manager.yaml
@@ -1,11 +1,10 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bootstrap.cert-manager
+  name: cert-manager
   namespace: argocd
 spec:
   destination:
-    name: ''
     namespace: cert-manager
     server: 'https://kubernetes.default.svc'
   source:
