--- a/v1.19.9/cert-manager.yaml
+++ b/v1.19.9/cert-manager.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cert-manager
+  name: bootstrap-cert-manager
   namespace: argocd
 spec:
   destination:
