--- a/v1.19.9/baremetal-ingress-controller.yaml
+++ b/v1.19.9/baremetal-ingress-controller.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ingress-nginx
+  name: bootstrap-ingress-nginx
 spec:
   destination:
     name: ''
