--- a/v1.19.9/baremetal-ingress-controller.yaml
+++ b/v1.19.9/baremetal-ingress-controller.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    name: ''
+    name: ingress-nginx
     namespace: ingress-nginx
     server: 'https://kubernetes.default.svc'
   source:
