--- a/v1.19.9/baremetal-ingress-controller.yaml
+++ b/v1.19.9/baremetal-ingress-controller.yaml
@@ -21,7 +21,7 @@ spec:
         - name: controller.service.nodePorts.https
           value: '30443'
         - name: controller.service.type
-          value: ''
+          value: 'NodePort'
         - name: controller.kind
           value: DaemonSet
   project: operation
