--- a/v1.19.9/elastic.yaml
+++ b/v1.19.9/elastic.yaml
@@ -15,6 +15,8 @@ spec:
     chart: elasticsearch
     helm:
       parameters:
+        - name: replicas
+          value: 1
         - name: esJavaOpts
           value: '-Xmx128m -Xms128m'
         - name: volumeClaimTemplate.resources.requests.storage
