--- a/v1.19.9/elastic.yaml
+++ b/v1.19.9/elastic.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bootstrap-elastic
+  name: elastic
   namespace: argocd
 spec:
   destination:
