--- a/v1.19.9/filebeat.yaml
+++ b/v1.19.9/filebeat.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bootstrap-filebeat
+  name: filebeat
   namespace: argocd
 spec:
   destination:
