--- a/v1.19.9/kibana.yaml
+++ b/v1.19.9/kibana.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bootstrap-kibana
+  name: kibana
   namespace: argocd
 spec:
   destination:
