--- a/v1.19.9/local-path-provisioner.yaml
+++ b/v1.19.9/local-path-provisioner.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bootstrap-local-path-provisioner
+  name: local-path-provisioner
   namespace: argocd
 spec:
   destination:
-    namespace: default
+    namespace: operation
     server: 'https://kubernetes.default.svc'
   project: default
   source:
