--- a/v1.19.9/cert-manager.yaml
+++ b/v1.19.9/cert-manager.yaml
@@ -15,7 +15,7 @@ spec:
       parameters:
         - name: installCRDs
           value: 'True'
-  project: default
+  project: operation
   syncPolicy:
     automated:
       prune: true
