--- a/v1.19.9/local-path-provisioner.yaml
+++ b/v1.19.9/local-path-provisioner.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    namespace: local-path-provisioner
+    namespace: local-path-storage
     server: 'https://kubernetes.default.svc'
   project: operation
   source:
