--- a/v1.19.9/baremetal-public-ingress-controller.yaml
+++ b/v1.19.9/baremetal-public-ingress-controller.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: internal-ingress-nginx
+  name: public-ingress-nginx
   namespace: argocd
 spec:
   destination:
