--- a/v1.19.9/elastic.yaml
+++ b/v1.19.9/elastic.yaml
@@ -16,9 +16,9 @@ spec:
     helm:
       parameters:
         - name: replicas
-          value: '1'
+          value: '2'
         - name: esJavaOpts
-          value: '-Xmx1024m -Xms1024m'
+          value: '-Xmx512m -Xms512m'
         - name: volumeClaimTemplate.resources.requests.storage
           value: 1Gi
         - name: resources.limits.cpu
@@ -26,9 +26,9 @@ spec:
         - name: resources.requests.cpu
           value: 100m
         - name: resources.limits.memory
-          value: 1500M
+          value: 1000m
         - name: resources.requests.memory
-          value: 1500M
+          value: 1000M
   project: operation
   syncPolicy:
     automated:
