--- a/v1.19.9/elastic.yaml
+++ b/v1.19.9/elastic.yaml
@@ -26,7 +26,7 @@ spec:
         - name: resources.requests.cpu
           value: 100m
         - name: resources.limits.memory
-          value: 1000m
+          value: 1000M
         - name: resources.requests.memory
           value: 1000M
   project: operation
