--- a/v1.19.9/baremetal-public-ingress-controller.yaml
+++ b/v1.19.9/baremetal-public-ingress-controller.yaml
@@ -25,7 +25,9 @@ spec:
         - name: controller.service.type
           value: 'NodePort'
         - name: controller.ingressClass
-          value: public-ingress          
+          value: public-ingress
+        - name: controller.admissionWebhooks.enabled
+          value: false          
   project: operation
   syncPolicy:
     automated:
