--- a/v1.19.9/baremetal-internal-ingress-controller.yaml
+++ b/v1.19.9/baremetal-internal-ingress-controller.yaml
@@ -27,7 +27,7 @@ spec:
         - name: controller.ingressClass
           value: internal-ingress
         - name: controller.admissionWebhooks.enabled
-          value: false                   
+          value: 'false'               
   project: operation
   syncPolicy:
     automated:
