--- a/v1.19.9/nfs-provisioner/nfs-provisioner.yaml
+++ b/v1.19.9/nfs-provisioner/nfs-provisioner.yaml
@@ -103,7 +103,7 @@ spec:
               mountPath: /persistentvolumes
           env:
             - name: PROVISIONER_NAME
-              value: example.com/nfs
+              value: jackie/nfs
             - name: NFS_SERVER
               value: 192.168.69.143
             - name: NFS_PATH
