--- a/v1.19.9/nfs-provisioner/nfs-provisioner.yaml
+++ b/v1.19.9/nfs-provisioner/nfs-provisioner.yaml
@@ -28,7 +28,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: nfs-client-provisioner
-    namespace: default
+    namespace: nfs-provisioner
 roleRef:
   kind: ClusterRole
   name: nfs-client-provisioner-runner
