--- a/v1.19.9/filebeat.yaml
+++ b/v1.19.9/filebeat.yaml
@@ -11,6 +11,30 @@ spec:
     repoURL: 'https://Helm.elastic.co'
     targetRevision: 7.12.0
     chart: filebeat
+    helm:
+      values: |
+        daemonset:
+          filebeatConfig:
+            filebeat.yml: |
+              filebeat.inputs:
+              - type: container
+                paths:
+                  - /var/log/containers/*.log
+                processors:
+                - add_kubernetes_metadata:
+                    host: ${NODE_NAME}
+                    matchers:
+                    - logs_path:
+                        logs_path: "/var/log/containers/"
+                - drop_event.when:
+                  or:
+                  - equals:
+                      kubernetes.namespace: "kube-system"
+                  - equals:
+                      kubernetes.namespace: "argocd"
+              output.elasticsearch:
+                host: '${NODE_NAME}'
+                hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-master:9200}'
   project: operation
   syncPolicy:
     automated:
