--- a/v1.19.9/baremetal-public-ingress-controller.yaml
+++ b/v1.19.9/baremetal-public-ingress-controller.yaml
@@ -18,10 +18,10 @@ spec:
           value: 'true'
         - name: controller.service.externalTrafficPolicy
           value: Local
-        - name: controller.service.nodePorts.http
-          value: '30080'
-        - name: controller.service.nodePorts.https
-          value: '30443'
+#         - name: controller.service.nodePorts.http
+#           value: '30080'
+#         - name: controller.service.nodePorts.https
+#           value: '30443'
         - name: controller.service.loadBalancerIP
           value: '192.168.68.201'
         - name: controller.ingressClass
